--- a/style/style.css
+++ b/style/style.css
@@ -10,25 +10,25 @@
   --fz18: 18px;
   --fz16: 16px;
   --fz14: 14px;
+  --fz8: 8px;
 }
 
 body {
   background-color: #FFFFFF;
   margin: 0;
   padding: 0;
-  color: #232331;
-  font-family: "Rubik", sans-serif;
+  color: #000000;
+  font-family: "GrtskPeta", sans-serif;
   box-sizing: border-box;
-  font-size: var(--fz18);
+  font-size: var(--fz14);
   font-weight: 400;
-  color: #232331;
 }
 
 a,
 a i {
   display: inline-block;
   text-decoration: none;
-  color: #232331;
+  color: #000000;
   transition: all 0.3s;
 }
 
@@ -69,7 +69,7 @@ input,
 textarea,
 select {
   outline: none;
-  border: 1px solid #D9D9D9;
+  border: 1px solid #CED4D7;
   background: #FFFFFF;
   padding: 10px 18px;
   height: -moz-fit-content;
@@ -110,55 +110,46 @@ select::-ms-expand {
   gap: 10px;
   text-align: center;
   padding: 18px 37px;
-  background-color: #FFBF42;
+  background-color: #000000;
   border: 1px solid transparent;
   font-weight: 500;
   transition: all 0.3s;
   cursor: pointer;
-  color: #232331;
+  color: #000000;
   text-transform: uppercase;
 }
 .btn:hover {
-  background-color: #292929;
-  color: #FFFFFF;
+  background-color: #FFFFFF;
+  color: #000000;
 }
 .btn:hover i {
   color: #FFFFFF;
 }
-.btn.borderWhite {
-  background-color: transparent;
-  border-color: #FFFFFF;
-  color: #FFFFFF;
-}
-.btn.borderWhite:hover {
+.btn.white {
+  color: #000000;
   background-color: #FFFFFF;
-  color: #232331;
 }
-.btn.black {
-  background-color: #232331;
+.btn.white:hover {
+  background-color: #000000;
   color: #FFFFFF;
 }
-.btn.black:hover {
-  background-color: #FFBF42;
-  color: #232331;
+.btn.red {
+  color: #000000;
+  background-color: #EB5757;
 }
-.btn.gray {
-  background-color: #D9D9D9;
-  color: #232331;
-}
-.btn.gray:hover {
-  background-color: #232331;
+.btn.red:hover {
+  background-color: #000000;
   color: #FFFFFF;
 }
 
 ._title {
   font-size: var(--fz64);
   font-weight: 500;
-  color: #232331;
+  color: #000000;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #232331;
+  color: #000000;
 }
 
 .container,
@@ -174,4 +165,193 @@ h1, h2, h3, h4, h5, h6 {
 
 .container-big {
   width: var(--container_big);
+}
+
+ul {
+  list-style: none;
+}
+
+.header-add {
+  background-color: #000000;
+  color: #FFFFFF;
+  left: 0;
+  top: 0;
+  position: sticky;
+  width: 100%;
+}
+.header-add a {
+  color: #FFFFFF;
+}
+.header-add .header-addBlock {
+  padding: 15px 0;
+}
+.header-add .header-addBlock .info-block {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.header-add .header-addBlock .info-block .item {
+  display: flex;
+  align-items: center;
+}
+.header-add .header-addBlock .info-block .item:nth-child(1) {
+  gap: 35px;
+}
+.header-add .header-addBlock .info-block .item:nth-child(2) > ul {
+  margin: 0;
+  padding: 0;
+  gap: 30px;
+  display: flex;
+  align-items: center;
+}
+.header-add .header-addBlock .info-block .item:nth-child(2) > ul li {
+  gap: 15px;
+  display: flex;
+  align-items: center;
+}
+.header-add .header-addBlock .info-block .item:nth-child(2) > ul li .icon {
+  width: 20px;
+  height: 20px;
+}
+.header-add .header-addBlock .info-block .item:nth-child(2) > ul li .icon img {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.header-add .header-addBlock .info-block .item .location {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.header-add .header-addBlock .info-block .item .location i {
+  font-size: --fz14;
+}
+.header-add .header-addBlock .info-block .item .location .text {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.header-add .header-addBlock .info-block .item .location .text span {
+  display: inline-block;
+}
+.header-add .header-addBlock .info-block .item .location .text select {
+  background-color: transparent;
+  color: #FFFFFF;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  flex: 1;
+}
+.header-add .header-addBlock .info-block .item .location .text select option {
+  color: #000000;
+}
+.header-add .header-addBlock .info-block .item nav ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 26px;
+       column-gap: 26px;
+}
+
+header .header {
+  padding: 0;
+  background-color: #FFFFFF;
+}
+header .header .info_block {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  padding: 22px 0;
+}
+header .header .info_block .item.category {
+  display: flex;
+  align-items: center;
+}
+header .header .info_block .item.category ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+header .header .info_block .item.category ul li {
+  display: block;
+  position: relative;
+}
+header .header .info_block .item.category ul li.active::before {
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #000000;
+}
+header .header .info_block .item.logo-block {
+  width: 240px;
+}
+header .header .info_block .item.logo-block .logo {
+  width: 100%;
+}
+header .header .info_block .item.logo-block .logo img {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+header .header .info_block .item.functions {
+  font-size: var(--fz8);
+}
+header .header .info_block .item.functions ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 25px;
+  justify-content: flex-end;
+}
+header .header .info_block .item.functions ul li a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+header .header .info_block .item.functions ul li a .icon {
+  width: 24px;
+  height: 24px;
+}
+header .header .info_block .item.functions ul li a .icon img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+header .header .info_block .item.functions ul li a span {
+  display: block;
+  text-transform: uppercase;
+}
+
+.header-category {
+  background-color: #F9F9F9;
+  padding: 18px 0;
+}
+.header-category .header-categoryBlock ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  gap: 10px 25px;
+  flex-wrap: wrap;
+}
+.header-category .header-categoryBlock ul li.active a, .header-category .header-categoryBlock ul li:hover a {
+  color: #EB5757;
+}
+.header-category .header-categoryBlock ul li a {
+  display: block;
+  transition: all 0.3s;
+}
+
+main {
+  height: 200vh;
 }/*# sourceMappingURL=style.css.map */
