--- a/style/style.scss
+++ b/style/style.scss
@@ -1,11 +1,11 @@
-$LightGray: #F9F9F9;
-$DarkGray: #828B8D;
-$Black: #000000;
-$White: #FFFFFF;
-$Gray: #CED4D7;
-$Green: #219653;
-$Red: #EB5757;
-$Gray-1: #BDBDBD;
+$lightGray: #F9F9F9;
+$darkGray: #828B8D;
+$black: #000000;
+$white: #FFFFFF;
+$gray: #CED4D7;
+$green: #219653;
+$red: #EB5757;
+$gray-1: #BDBDBD;
 $fonts_1: 'GrtskPeta', sans-serif;
 
 @mixin bg_s {
@@ -13,7 +13,19 @@ $fonts_1: 'GrtskPeta', sans-serif;
     background-repeat: no-repeat;
     background-position: center;
 }
-
+@mixin df_ac{
+    display: flex;
+    align-items: center;
+}
+@mixin df_jcc {
+    display: flex;
+    justify-content: center;
+}
+@mixin df_ac_jcc {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 :root {
     --container: 1360px;
     --container_big: 1580px;
@@ -26,6 +38,7 @@ $fonts_1: 'GrtskPeta', sans-serif;
     --fz18: 18px;
     --fz16: 16px;
     --fz14: 14px;
+    --fz8: 8px;
 }
 body {
     background-color: $white;
@@ -34,9 +47,8 @@ body {
     color: $black;
     font-family: $fonts_1;
     box-sizing: border-box;
-    font-size: var(--fz18);
+    font-size: var(--fz14);
     font-weight: 400;
-    color: $black;
 }
 a,
 a i {
@@ -70,6 +82,7 @@ video {
     height: 100%;
     object-fit: cover;
 }
+
 input,
 textarea,
 select {
@@ -100,52 +113,43 @@ select {
 .mt0 {
     margin-top: 0!important;
 }
-.btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    text-align: center;
-    padding: 18px 37px;
-    background-color: $yellow;
-    border: 1px solid transparent;
-    font-weight: 500;
-    transition: all .3s;
-    cursor: pointer;
-    color: $black;
-    text-transform: uppercase;
-    &:hover {
-        background-color: #292929;
-        color: $white;
-        i {
-            color: $white;
-        }
-    }
-    &.borderWhite {
-        background-color: transparent;
-        border-color: $white;
-        color: $white;
-        &:hover {
-            background-color: $white;
-            color: $black;
-        }
-    }
-    &.black {
-        background-color: $black;
-        color: $white;
-        &:hover {
-            background-color: $yellow;
-            color: $black;
-        }
-    }
-    &.gray {
-        background-color: $gray;
-        color: $black;
-        &:hover {
-            background-color: $black;
-            color: $white;
-        }
-    }
+.btn { 
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    gap: 10px; 
+    text-align: center; 
+    padding: 18px 37px; 
+    background-color: $black; 
+    border: 1px solid transparent; 
+    font-weight: 500; 
+    transition: all .3s; 
+    cursor: pointer; 
+    color: $black; 
+    text-transform: uppercase; 
+    &:hover { 
+        background-color: $white; 
+        color: $black; 
+        i { 
+            color: $white; 
+        } 
+    } 
+   &.white { 
+    color: $black; 
+    background-color: $white; 
+    &:hover { 
+        background-color: $black; 
+        color: $white; 
+    } 
+   } 
+   &.red { 
+    color: $black; 
+    background-color: $red; 
+    &:hover { 
+        background-color: $black; 
+        color: $white; 
+    } 
+   } 
 }
 ._title {
     font-size: var(--fz64);
@@ -166,4 +170,193 @@ h1, h2, h3, h4, h5, h6 {
 }
 .container-big {
     width: var(--container_big);
+}
+ul {
+    list-style: none;
+}
+
+.header-add {
+        background-color: $black;
+        color: $white;
+        left: 0;
+        top: 0;
+        position: sticky;
+        width: 100%;
+        a {
+            color: $white;
+        }
+    .header-addBlock {
+        padding: 15px 0;
+        .info-block {
+            @include df_ac;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            .item {
+                @include df_ac;
+                &:nth-child(1) {
+                    gap: 35px;
+                }
+                &:nth-child(2) {
+                    > ul {
+                        margin: 0;
+                        padding: 0;
+                        gap: 30px;
+                        @include df_ac;
+                        li {
+                            gap: 15px;
+                            @include df_ac;
+                            .icon {
+                                width: 20px;
+                                height: 20px;
+                                img {
+                                    object-fit: contain;
+                                }
+                            }
+                        }
+                    }
+                }
+                .location {
+                    @include df_ac;
+                    gap: 15px;
+                    i {
+                        font-size: (--fz14);
+                    }
+                    .text {
+                        @include df_ac;
+                        gap: 5px;
+                        span {
+                            display: inline-block;
+                        }
+                        select {
+                            background-color: transparent;
+                            color: $white;
+                            margin: 0;
+                            padding: 0;
+                            border: 0;
+                            flex: 1;
+                            option {
+                                color: $black;
+                            }
+                        }
+                    }
+                }
+                nav {
+                    ul {
+                        margin: 0;
+                        padding: 0;
+                        @include df_ac;
+                        column-gap: 26px;
+                    } 
+                } 
+            }
+        }
+    }
+}
+header {
+    .header {
+        padding: 0;
+        background-color: $white;
+        .info_block {
+            display: grid;
+            grid-template-columns: 1fr auto 1fr;
+            align-items: center;
+            padding: 22px 0;
+            .item {
+                &.category {
+                    @include df_ac;
+                    ul {
+                        margin: 0;
+                        padding: 0;
+                        list-style: none;
+                        @include df_ac;
+                        gap: 25px;
+                        li {
+                            display: block;
+                            position: relative;
+                            &.active {
+                                &::before {
+                                    content: '';
+                                    position: absolute;
+                                    bottom: -10px;
+                                    left: 0;
+                                    width: 100%;
+                                    height: 2px;
+                                    background-color: $black;
+                                }
+                            }
+                        }
+                    }
+                }
+                &.logo-block {
+                    width: 240px;
+                    .logo {
+                        width: 100%;
+                        img {
+                            object-fit: contain;
+                        }
+                    }
+                }
+                &.functions {
+                    font-size: var(--fz8);
+                    ul {
+                        margin: 0;
+                        padding: 0;
+                        list-style: none;
+                        @include df_ac;
+                        gap: 25px;
+                        justify-content: flex-end;
+                        li {
+                            a {
+                                display: flex;
+                                flex-direction: column;
+                                align-items: center;
+                                justify-content: center;
+                                gap: 8px;
+                                .icon {
+                                    width: 24px;
+                                    height: 24px;
+                                    img {
+                                        width: 100%;
+                                        object-fit: contain;
+                                    }
+                                }
+                                span {
+                                    display: block;
+                                    text-transform: uppercase;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+.header-category {
+    background-color: $lightGray;
+    padding: 18px 0;
+    .header-categoryBlock {
+        ul {
+            margin: 0;
+            padding: 0;
+            @include df_ac();
+            gap: 10px 25px;
+            flex-wrap: wrap;
+            li {
+                &.active,
+                &:hover {
+                    a {
+                        color: $red;
+                    }
+                }
+                a {
+                    display: block;
+                    transition: all .3s;
+                }
+            }
+        }
+    }
+}
+main {
+    height: 200vh;
 }
