--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,7 @@
   --fz18: 18px;
   --fz16: 16px;
   --fz14: 14px;
+  --fz12: 12px;
   --fz8: 8px;
 }
 
@@ -815,4 +816,177 @@ header .header .info-block .item.functions ul li a span {
   width: 22px;
   -o-object-fit: contain;
      object-fit: contain;
+}
+
+footer {
+  margin-top: 160px;
+  background-color: #000000;
+  color: #ffffff;
+  position: relative;
+}
+footer::before {
+  content: "";
+  width: 100%;
+  height: 160px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("../img/footer/footer.png");
+  background-position: top;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translateY(-100%);
+}
+footer a {
+  color: #ffffff;
+}
+footer a:hover {
+  color: #ffffff;
+  opacity: 0.6;
+}
+footer .footer .footer_1,
+footer .footer .footer_2,
+footer .footer .footer_3 {
+  padding: 27px 0;
+}
+footer .footer .footer_1 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 26px;
+  justify-content: space-between;
+}
+footer .footer .footer_1 .logo {
+  width: 320px;
+}
+footer .footer .footer_1 .logo img {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+footer .footer .footer_1 .mailing .mailingBlock {
+  padding: 16px 22px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: var(--fz16);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+footer .footer .footer_1 .mailing .mailingBlock:hover {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+}
+footer .footer .footer_1 .mailing .mailingBlock .iconT {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+footer .footer .footer_1 .mailing .mailingBlock .iconT .icon {
+  width: 20px;
+}
+footer .footer .footer_1 .mailing .mailingBlock .iconT .icon svg {
+  display: block;
+  width: 100%;
+}
+footer .footer .footer_1 .mailing .mailingBlock .iconT .text > span {
+  color: #EB5757;
+}
+footer .footer .footer_1 .mailing .mailingBlock .arrow {
+  width: 22px;
+}
+footer .footer .footer_1 .mailing .mailingBlock .arrow svg {
+  display: block;
+  width: 100%;
+}
+footer .footer .footer_2 {
+  display: grid;
+  grid-template-columns: 350px repeat(auto-fit, minmax(150px, 1fr));
+  gap: 20px 50px;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+footer .footer .footer_2 .item {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+footer .footer .footer_2 .item .name {
+  font-size: var(--fz16);
+  font-weight: 500;
+}
+footer .footer .footer_2 .item.app .appBlock {
+  display: grid;
+  grid-auto-flow: dense;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  gap: 15px 29px;
+}
+footer .footer .footer_2 .item.app .appBlock .QR {
+  grid-row: span 2;
+}
+footer .footer .footer_2 .item.app .appBlock img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: top;
+     object-position: top;
+}
+footer .footer .footer_2 .item.contacts .infoBlock {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+footer .footer .footer_2 .item.contacts .infoBlock .itemA {
+  display: flex;
+  gap: 10px 23px;
+}
+footer .footer .footer_2 .item.contacts .infoBlock .itemA .icon {
+  width: 23px;
+}
+footer .footer .footer_2 .item.contacts .infoBlock .itemA .icon svg {
+  display: block;
+  width: 100%;
+}
+footer .footer .footer_2 .item.contacts .infoBlock .itemA .info {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+footer .footer .footer_2 .item.contacts .infoBlock .itemA .info .mainText {
+  font-size: var(--fz16);
+}
+footer .footer .footer_2 .item.contacts .infoBlock .itemA .info .subText {
+  font-size: var(--fz12);
+  color: #BDBDBD;
+}
+footer .footer .footer_2 .item.list nav ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+footer .footer .footer_2 .item.list nav ul li {
+  font-size: var(--fz12);
+}
+footer .footer .footer_2 .item.list nav ul li > a {
+  color: #BDBDBD;
+}
+footer .footer .footer_3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+footer .footer .footer_3 .social {
+  display: flex;
+  align-items: center;
+  gap: 10px 25px;
+}
+footer .footer .footer_3 .social > a {
+  height: 23px;
+}
+footer .footer .footer_3 .social > a svg {
+  display: block;
+}
+footer .footer .footer_3 .desc {
+  font-size: var(--fz12);
+  color: #BDBDBD;
 }/*# sourceMappingURL=style.css.map */
