--- a/style/style.scss
+++ b/style/style.scss
@@ -56,7 +56,7 @@ a i {
     color: $black;
     transition: all .3s;
     cursor: pointer;
-}
+} 
 a:hover,
 a:hover i {
     color: rgba(14, 14, 14, 0.7);
@@ -136,6 +136,9 @@ select {
         &:hover {
             background-color: $black;
             color: $white;
+        }
+        &.border {
+            border-color: $black!important;
         }
     }
     &.red {
@@ -305,11 +308,13 @@ header {
                                 .icon {
                                     width: 24px;
                                     height: 24px;
+                                    pointer-events: none;
                                     img {
                                         object-fit: contain;
                                     }
                                 }
                                 span {
+                                    pointer-events: none;
                                     display: block;
                                     text-transform: uppercase;
                                 }
@@ -1002,6 +1007,131 @@ footer {
             .desc {
                 font-size: var(--fz12);
                 color: $gray;
+            }
+        }
+    }
+}
+.checkbox-block {
+    cursor: pointer;
+    display: flex;
+    gap: 10px;
+}
+.checkbox {
+    position: relative;
+    input#check {
+        cursor: pointer;
+        position: absolute;
+        opacity: 0;
+        display: none;
+        &:checked {
+            & + div {
+                background-color: $black;
+            }
+        }
+        &:checked + div svg path {
+            stroke-dashoffset: 0;
+        }
+        &:focus + div {
+            transform: scale(1.03);
+        }
+        &.error {
+            + div {
+                border-color: red;
+            }
+        }
+    }
+    #check + div {
+        display: block;
+        border: 2px solid $black;
+        width: 20px;
+        height: 20px;
+        border-radius: 3px;
+        cursor: pointer;
+        transition: all .2s ease;
+        &:active {
+            border-radius: 3px;
+        }
+        svg {
+            pointer-events: none;
+            position: absolute;
+            top: 50%;
+            left: 4px;
+            transform: translate(-1px, -50%);
+            path {
+                fill: none;
+                stroke: $white;
+                stroke-width: 6px;
+                // stroke-linecap: round;
+                // stroke-linejoin: round;
+                stroke-dasharray: 100;
+                stroke-dashoffset: 101;
+                transition: all 350ms cubic-bezier(1,0,.37,.91);
+            }
+        }
+    }
+}
+
+.modal {
+    .modal-content {
+        padding: 40px 80px;
+        .modal-header {
+            position: relative;
+            font-size: var(--fz18);
+            font-weight: 500;
+            &.center {
+                text-align: center;
+            }
+        }
+        .btn-close {
+            position: absolute;
+            top: 50%;
+            right: 40px;
+            background-color: $white;
+            opacity: 1;
+            border-radius: 0;
+            filter: invert(1);
+            padding: 9px 10px;
+            transform: translateY(calc(-50% + 9px));
+        }
+    }
+    .modal-body {
+        padding: 0;
+        >.info-block {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            .item {
+                padding: 40px 70px;
+                display: flex;
+                flex-direction: column;
+                gap: 25px;
+
+                &:nth-child(2) {
+                    background-color: $lgrey;
+                }
+                .name {
+                    font-size: var(--fz21);
+                    font-weight: 500;
+                }
+                .application-block {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 25px;
+                    .field {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 5px;
+                        >span {
+                            font-size: var(--fz12);
+                            color: $dgrey;
+                        }
+                    }
+                    .fb {
+                        margin-top: -5px;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 40px;
+                    }
+                }
             }
         }
     }
