--- a/style/style.css
+++ b/style/style.css
@@ -26,8 +26,8 @@ a i {
   display: inline-block;
   text-decoration: none;
   color: #000000;
-  transition: all 0.3s;
   cursor: pointer;
+  transition: all 0.3s;
 }
 
 a:hover,
@@ -85,6 +85,16 @@ input.error,
 textarea.error,
 select.error {
   border-color: red !important;
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' height='1em' viewBox='0 0 512 512'%3e%3c!--! Font Awesome Free 6.4.2 by %40fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --%3e%3cpath d='M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z'/%3e%3c/svg%3e") calc(100% - 15px)/10px no-repeat #ffffff;
+}
+select::-ms-expand {
+  display: none;
 }
 
 .mt0 {
@@ -1062,7 +1072,6 @@ footer .footer .footer_3 .desc {
   border: 2px solid #000000;
   width: 20px;
   height: 20px;
-  border-radius: 3px;
   cursor: pointer;
   transition: all 0.2s ease;
 }
@@ -1085,18 +1094,18 @@ footer .footer .footer_3 .desc {
   transition: all 350ms cubic-bezier(1, 0, 0.37, 0.91);
 }
 
-.modal .modal-content {
+.modal#infoModal .modal-content .modal-header {
   padding: 40px 80px;
-}
-.modal .modal-content .modal-header {
   position: relative;
+}
+.modal#infoModal .modal-content .modal-header .modal-title {
   font-size: var(--fz18);
   font-weight: 500;
 }
-.modal .modal-content .modal-header.center {
+.modal#infoModal .modal-content .modal-header .modal-title.center {
   text-align: center;
 }
-.modal .modal-content .btn-close {
+.modal#infoModal .modal-content .modal-header .btn-close {
   position: absolute;
   top: 50%;
   right: 40px;
@@ -1107,43 +1116,176 @@ footer .footer .footer_3 .desc {
   padding: 9px 10px;
   transform: translateY(calc(-50% + 9px));
 }
-.modal .modal-body {
+.modal#infoModal .modal-content .modal-body {
   padding: 0;
 }
-.modal .modal-body > .info-block {
+.modal#infoModal .modal-content .modal-body > .info-block {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
-.modal .modal-body > .info-block .item {
+.modal#infoModal .modal-content .modal-body > .info-block.map {
+  grid-template-columns: 2fr 1fr;
+}
+.modal#infoModal .modal-content .modal-body > .info-block .item {
   padding: 40px 70px;
   display: flex;
   flex-direction: column;
   gap: 25px;
 }
-.modal .modal-body > .info-block .item:nth-child(2) {
+.modal#infoModal .modal-content .modal-body > .info-block .item:nth-child(2) {
   background-color: #F9F9F9;
 }
-.modal .modal-body > .info-block .item .name {
+.modal#infoModal .modal-content .modal-body > .info-block .item .name {
   font-size: var(--fz21);
   font-weight: 500;
 }
-.modal .modal-body > .info-block .item .application-block {
+.modal#infoModal .modal-content .modal-body > .info-block .item .application-block {
   display: flex;
   flex-direction: column;
   gap: 25px;
 }
-.modal .modal-body > .info-block .item .application-block .field {
+.modal#infoModal .modal-content .modal-body > .info-block .item .application-block .field {
   display: flex;
   flex-direction: column;
   gap: 5px;
 }
-.modal .modal-body > .info-block .item .application-block .field > span {
+.modal#infoModal .modal-content .modal-body > .info-block .item .application-block .field > span {
   font-size: var(--fz12);
   color: #828B8D;
 }
-.modal .modal-body > .info-block .item .application-block .fb {
+.modal#infoModal .modal-content .modal-body > .info-block .item .application-block .fb {
   margin-top: -5px;
   display: flex;
   flex-direction: column;
   gap: 40px;
+}
+.modal#infoModal .modal-content .modal-body > .info-block .item .application-block .fb .field-block {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+.modal#infoModal .modal-content .modal-body > .info-block .item .application-block .fb .field-block .recover-pass {
+  color: #828B8D;
+}
+.modal#mapModal .modal-dialog {
+  max-width: 1360px;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-header {
+  border: 0;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body {
+  padding: 0 68px 40px;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .info-block {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 20px 53px;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .info-block .item #map {
+  height: 575px;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .city {
+  display: flex;
+  align-items: center;
+  gap: 10px 22px;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .city select {
+  flex: 1;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item.main {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list {
+  display: flex;
+  flex-direction: column;
+  gap: 17px;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list .name-block-main {
+  width: 100%;
+  overflow-x: auto;
+  position: relative;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list .name-block-main::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 1px;
+  width: 100%;
+  background-color: #CED4D7;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list .name-block-main .name-block {
+  display: flex;
+  align-items: flex-end;
+  position: relative;
+  z-index: 1;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list .name-block-main .name-block > span {
+  display: block;
+  padding: 5px 10px;
+  white-space: nowrap;
+  color: #828B8D;
+  font-weight: 500;
+  border-bottom: 2px solid transparent;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list .name-block-main .name-block > span.active {
+  color: #EB5757;
+  border-color: #EB5757;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list .list ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list .list ul:not(.active) {
+  display: none;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list .list ul li {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  cursor: pointer;
+  padding: 14px 0;
+  border-bottom: 1px solid #CED4D7;
+  transition: all 0.3s;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list .list ul li:last-of-type {
+  border-bottom: 0;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list .list ul li::after {
+  content: "";
+  width: 8px;
+  height: 12px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: block;
+  pointer-events: none;
+  background-size: contain;
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' height='1em' viewBox='0 0 320 512'%3e%3c!--! Font Awesome Free 6.4.2 by %40fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --%3e%3cpath d='M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z'/%3e%3c/svg%3e");
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list .list ul li:hover {
+  background-color: #F9F9F9;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-bottom-color: #F9F9F9;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list .list ul li .name {
+  font-weight: 500;
+  color: #000000;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list .list ul li .add {
+  font-size: 8px;
+  margin: 2px 0 4px;
+  color: #828282;
+  font-weight: 500;
+}
+.modal#mapModal .modal-dialog .modal-content .modal-body .item .tab-list .list ul li .price {
+  font-size: var(--fz12);
+  color: #000000;
+  margin-top: 1px;
 }/*# sourceMappingURL=style.css.map */
