--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@
   --fz16: 16px;
   --fz14: 14px;
   --fz8: 8px;
+  --fz12: 12px;
 }
 
 body {
@@ -1288,4 +1289,263 @@ footer .footer .footer_3 .desc {
   font-size: var(--fz12);
   color: #000000;
   margin-top: 1px;
+}
+
+.stocksMiniSection {
+  background-color: #000000;
+}
+.stocksMiniSection .stocksMiniBlock .breadcrumbs ul {
+  display: flex;
+  align-items: center;
+  gap: 10px 22px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: var(--fz12);
+}
+.stocksMiniSection .stocksMiniBlock .breadcrumbs ul li {
+  position: relative;
+}
+.stocksMiniSection .stocksMiniBlock .breadcrumbs ul li:not(:last-of-type)::before {
+  content: "/";
+  position: absolute;
+  top: 50%;
+  right: -14px;
+  transform: translateY(-52%);
+  color: #ffffff;
+}
+.stocksMiniSection .stocksMiniBlock .breadcrumbs ul li a {
+  display: block;
+  color: #ffffff;
+  font-weight: 300;
+}
+.stocksMiniSection .stocksMiniBlock .breadcrumbs ul li a:hover {
+  color: #ffffff;
+  opacity: 0.7;
+}
+.stocksMiniSection .stocksMiniBlock .infoBlock {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  margin-top: 44px;
+  gap: 25px;
+}
+.stocksMiniSection .stocksMiniBlock .infoBlock .item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.stocksMiniSection .stocksMiniBlock .infoBlock .item .img {
+  position: relative;
+}
+.stocksMiniSection .stocksMiniBlock .infoBlock .item .img::before {
+  content: "";
+  display: block;
+  padding-bottom: 43.75%;
+}
+.stocksMiniSection .stocksMiniBlock .infoBlock .item .img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.stocksMiniSection .stocksMiniBlock .infoBlock .item .name {
+  color: #ffffff;
+  font-size: var(--fz21);
+}
+
+.categoryMiniSection .categoryMiniBlock {
+  position: relative;
+}
+.categoryMiniSection .categoryMiniBlock .swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+}
+.categoryMiniSection .categoryMiniBlock .swiper-slide:hover .img {
+  background-color: #CED4D7;
+}
+.categoryMiniSection .categoryMiniBlock .swiper-slide .img {
+  width: 100%;
+  position: relative;
+  background-color: #F9F9F9;
+  border-radius: 50%;
+  overflow: hidden;
+  transition: all 0.3s;
+}
+.categoryMiniSection .categoryMiniBlock .swiper-slide .img::before {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+.categoryMiniSection .categoryMiniBlock .swiper-slide .img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -o-object-fit: contain;
+     object-fit: contain;
+  padding: 17px;
+}
+.categoryMiniSection .categoryMiniBlock .swiper-slide .name {
+  text-align: center;
+}
+.categoryMiniSection .swiper-button-next::after, .categoryMiniSection .swiper-button-prev::after {
+  font-size: 30px;
+}
+
+.catalogueSection .catalogueBlock .title {
+  display: flex;
+  font-size: var(--fz32);
+  font-weight: 700;
+  gap: 15px;
+  margin-bottom: 25px;
+}
+.catalogueSection .catalogueBlock .title::after {
+  content: attr(data-count);
+  display: block;
+  font-size: var(--fz16);
+  color: #BDBDBD;
+  font-family: 700;
+}
+.catalogueSection .catalogueBlock .add {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.catalogueSection .catalogueBlock .add .filter-mini {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item {
+  position: relative;
+  display: flex;
+  gap: 10px 21px;
+  align-items: center;
+  border: 1px solid #CED4D7;
+  padding: 20px;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item::before {
+  content: attr(data-num);
+  display: block;
+  font-size: var(--fz48);
+  color: #000000;
+  font-weight: 500;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .name {
+  font-size: var(--fz16);
+  font-weight: 500;
+  color: #000000;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .nv {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .nv .name {
+  font-size: var(--fz16);
+  font-weight: 500;
+  color: #000000;
+  letter-spacing: -0.32px;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .nv .variants {
+  display: flex;
+  gap: 10px 12px;
+  position: relative;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .nv .variants .item_a .name {
+  font-size: var(--fz12);
+  font-weight: 500;
+  color: #000000;
+  text-decoration: underline;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .nv .variants .item_a .name > span {
+  cursor: pointer;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .nv .variants .item_a .name:hover > ul {
+  visibility: inherit;
+  opacity: 1;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .nv .variants .item_a ul {
+  visibility: hidden;
+  opacity: 0;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  left: 0;
+  width: 220px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  z-index: 1;
+  transition: all 0.3s;
+  padding-top: 5px;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .nv .variants .item_a ul li {
+  cursor: pointer;
+  border-left: 1px solid #CED4D7;
+  border-right: 1px solid #CED4D7;
+  background-color: #ffffff;
+  font-size: var(--fz12);
+  font-weight: 500;
+  padding: 7px 20px;
+  transition: all 0.3s;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .nv .variants .item_a ul li:first-of-type {
+  padding-top: 15px;
+  border-top: 1px solid #CED4D7;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .nv .variants .item_a ul li:last-of-type {
+  padding-bottom: 15px;
+  border-bottom: 1px solid #CED4D7;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .nv .variants .item_a ul li:hover {
+  background-color: #F9F9F9;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .nv .variants .item_a ul li.active {
+  background-color: #F9F9F9;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .icon {
+  height: 35px;
+  width: 40px;
+}
+.catalogueSection .catalogueBlock .add .filter-mini .item .icon img {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.catalogueSection .catalogueBlock .add .filter-mini-2 {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  gap: 25px;
+}
+.catalogueSection .catalogueBlock .add .filter-mini-2 .btn-block {
+  width: 100%;
+}
+.catalogueSection .catalogueBlock .add .filter-mini-2 .btn-block.visible .btn {
+  display: flex;
+  gap: 10px 57px;
+  justify-content: flex-start;
+  background-color: #F9F9F9;
+  color: #000000;
+  font-size: 12px;
+  font-weight: 500;
+}
+.catalogueSection .catalogueBlock .add .filter-mini-2 .btn-block.visible .btn span {
+  text-transform: uppercase;
+}
+.catalogueSection .catalogueBlock .add .filter-mini-2 .sort {
+  display: flex;
+  align-items: center;
+  grid-column: 2/-1;
+  justify-content: flex-end;
+  gap: 10px 15px;
+}
+.catalogueSection .catalogueBlock .add .filter-mini-2 .sort span {
+  color: #828B8D;
+}
+.catalogueSection .catalogueBlock .add .filter-mini-2 .sort .select {
+  min-width: 320px;
+}
+.catalogueSection .catalogueBlock .add .filter-mini-2 .sort .select select {
+  background-color: #F9F9F9;
+  border: 0;
+  padding: 15px;
 }/*# sourceMappingURL=style.css.map */
